--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -98,7 +98,7 @@
                 </template>
                 <template v-slot:item.id="{ item }">
                     <v-row>
-                        <span class="ma-1">
+                        <span class="ma-1" :title="item.id">
                         [[ "..." + item.id.substring(item.id.length - 8) ]]
                         </span>
                         <v-icon
@@ -205,6 +205,14 @@
                     </v-card-text>
                 </v-card>
             </v-dialog>
+            <v-snackbar v-model="snackbar.shouldShow" :color="snackbar.color">
+                [[ snackbar.text ]]
+                <template v-slot:action="{ attrs }">
+                    <v-btn text v-bind="attrs" @click="snackbar.shouldShow = false">
+                        Close
+                    </v-btn>
+                </template>
+            </v-snackbar>
         </v-container>
     </v-app>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
@@ -213,6 +221,7 @@
     <script src="https://cdn.jsdelivr.net/npm/mathjs@11.3.1/lib/browser/math.min.js"></script>
     <script type="module">
         import { shortcutKeys } from "{{ url_for('static', filename='grobid/shortcut-keys.js')}}"
+        import {copyTextToClipboard} from "{{ url_for('static', filename='grobid/lib.js')}}"
 
         let itemClassStore = {
             class: 'bg-white',
@@ -224,6 +233,11 @@
             vuetify: new Vuetify(),
             data() {
                 return {
+                    snackbar: {
+                      shouldShow: false,
+                      color: "",
+                      text: "",
+                    },
                     base_url: '{{ base_url }}',
                     itemDialog: {
                         mode: '', // 'edit', 'new', 'remove'
@@ -445,7 +459,19 @@
             },
             methods: {
                 copyTextToClipboard(text) {
-                    navigator.clipboard.writeText(text)
+                    try {
+                        copyTextToClipboard(text)
+                        this.snackbar = {
+                            text: `copied ${text}`,
+                            shouldShow: true
+                        }
+                    } catch (error) {
+                        console.error(error)
+                        this.snackbar = {
+                            text: `failed to copy`,
+                            shouldShow: true
+                        }
+                    }
                 },
                 showWholeSentence(item) {
                     item.sentenceIsExpanded = true
