--- a/supercon2/templates/document.html
+++ b/supercon2/templates/document.html
@@ -103,7 +103,7 @@
                     </template>
                     <template v-slot:item.id="{ item }">
                         <v-row>
-                            <span class="ma-1">
+                            <span class="ma-1" :title="item.id">
                             [[ "..." + item.id.substring(item.id.length - 8) ]]
                             </span>
                             <v-icon
@@ -304,6 +304,14 @@
                     </v-card>
                 </div>
                 <p><span style="color:#848484;">&copy; Contributors, 2022 |</span> <span id="version" style="color:#848484;" v-html="version"></span></p>
+                <v-snackbar v-model="snackbar.shouldShow" :color="snackbar.color">
+                    [[ snackbar.text ]]
+                    <template v-slot:action="{ attrs }">
+                        <v-btn text v-bind="attrs" @click="snackbar.shouldShow = false">
+                            Close
+                        </v-btn>
+                    </template>
+                </v-snackbar>
             </v-container>
         </v-app>
     </script>
@@ -316,6 +324,7 @@
     <script type="module">
         import { colors } from "{{ url_for('static', filename='grobid/colors.js')}}"
         import { shortcutKeys } from "{{ url_for('static', filename='grobid/shortcut-keys.js')}}"
+        import {copyTextToClipboard} from "{{ url_for('static', filename='grobid/lib.js')}}"
 
         const scale = 1.5
         let itemClassStore = {
@@ -327,6 +336,11 @@
             delimiters: ['[[', ']]'],
             data() {
                 return {
+                    snackbar: {
+                        shouldShow: false,
+                        color: "",
+                        text: "",
+                    },
                     base_url: '{{ base_url }}',
                     hash: '{{hash}}',
                     version: "",
@@ -683,7 +697,19 @@
                     });
                 },
                 copyTextToClipboard(text) {
-                    navigator.clipboard.writeText(text)
+                    try {
+                        copyTextToClipboard(text)
+                        this.snackbar = {
+                            text: `copied ${text}`,
+                            shouldShow: true
+                        }
+                    } catch (error) {
+                        console.error(error)
+                        this.snackbar = {
+                            text: `failed to copy`,
+                            shouldShow: true
+                        }
+                    }
                 },
                 showWholeSentence(item) {
                     item.sentenceIsExpanded = true
