--- a/supercon2/templates/document_old.html
+++ b/supercon2/templates/document_old.html
@@ -120,7 +120,7 @@
         </div>
 
     <footer>
-        <p><span style="color:#848484;">&copy; Contributors, 2022 |</span> <span id="version" style="color:#848484;">unknown version</span></p>
+        <p><span style="color:#848484;">&copy; Contributors, 2021-2023 |</span> <span id="version" style="color:#848484;">unknown version</span></p>
     </footer>
 </div>
 
