--- a/supercon2/templates/stats.html
+++ b/supercon2/templates/stats.html
@@ -103,7 +103,7 @@
     </div>
 
     <footer>
-        <p><span style="color:#848484;">&copy; Contributors, 2022 |</span> <span id="version" style="color:#848484;">{{ version }}</span></p>
+        <p><span style="color:#848484;">&copy; Contributors, 2021-2023 |</span> <span id="version" style="color:#848484;">{{ version }}</span></p>
     </footer>
 </div>
 
