--- a/supercon2/templates/training_data.html
+++ b/supercon2/templates/training_data.html
@@ -51,7 +51,7 @@
             </template>
         </v-data-table>
 
-        <p><span style="color:#848484;">&copy; Contributors, 2022 |</span> <span id="version" style="color:#848484;" v-html="version"></span></p>
+        <p><span style="color:#848484;">&copy; Contributors, 2021-2023 |</span> <span id="version" style="color:#848484;" v-html="version"></span></p>
         </p>
         <v-dialog v-model="tokenDialog" max-width="500">
             <v-card>
