DOI is excluded from required items because there may be records without DOI #172

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -416,7 +416,7 @@
                     return this.filteredItems[0]
                 },
                 saveIsValidated() {
-                    return this.editedItem.doi && this.editedItem.hash && this.editedItem.error_type
+                    return this.editedItem.hash && this.editedItem.error_type
                 },
                 headerObject() {
                     return Object.fromEntries(new Map(
