--- a/supercon2/templates/document.html
+++ b/supercon2/templates/document.html
@@ -465,9 +465,10 @@
                     ],
                     rowsOnItemEditDialog: [
                         {
-                            config: { cols: 4 },
+                            config: { cols: 3 },
                             cols: [
                                 { key: 'rawMaterial'},
+                                { key: 'name' },
                                 { key: 'id', disabled: true },
                                 {
                                     key: 'error_type', label: '*Error type', rules: [(value) => !!value || 'This field is required'],
