Fix #156: retro-compatibility to older document JSON

--- a/supercon2/templates/document.html
+++ b/supercon2/templates/document.html
@@ -622,6 +622,9 @@
 
                             if (propertyName === "formula") {
                                 formula = obj[key][sub_key]['rawValue'];
+                                if (formula === undefined) {
+                                    formula = obj[key][sub_key]
+                                }
                                 attributeHtmlString += "<row><div>" + propertyName + ": <strong>" + formula + "</strong></div></row>";
                             } else if (propertyName === 'rawTaggedValue') {
                                 // continue
@@ -632,6 +635,10 @@
                                 Object.keys(resolvedFormulasList).forEach(function (k) {
                                     resolvedFormulas.push(resolvedFormulasList[k]['rawValue'])
                                 });
+                            } else if (propertyName === 'resolvedFormula') {
+                                Object.keys(obj[key][sub_key]).forEach(function (k) {
+                                    resolvedFormulas.push(obj[key][sub_key][k])
+                                })
                             } else if (propertyName === 'variables') {
                                 let variableList = obj[key][sub_key]
                                 Object.keys(variableList).forEach(function (variable_name) {
