--- a/supercon2/templates/document.html
+++ b/supercon2/templates/document.html
@@ -251,7 +251,7 @@
                     </v-card>
                 </v-dialog>
                 <div id="pdfViewer" :style="{'position': 'relative'}" class="mt-4">
-                    <div id="pdfAnnotaions">
+                    <div id="pdfAnnotations">
                         <div v-for="passage in passages">
                             <div v-for="span in passage.spans">
                                 <div v-for="(box, index) in span.boundingBoxes">
