--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -129,9 +129,9 @@
                         <v-icon small class="mr-1" @click="markRecordInvalid(item)" title="Mark as invalid">
                             mdi-thumb-down
                         </v-icon>
-                        <v-icon small class="mr-1" @click="resetRecord(item)" title="Reset status">
-                            mdi-restart
-                        </v-icon>
+{#                        <v-icon small class="mr-1" @click="resetRecord(item)" title="Reset status">#}
+{#                            mdi-restart#}
+{#                        </v-icon>#}
                         <v-icon small class="mr-1" @click="openEditItemDialog(item)" title="Edit">
                         mdi-pencil
                         </v-icon>
@@ -788,7 +788,7 @@
                         )
                     )
                 },
-                async resetRecord(record) {
+                {#async resetRecord(record) {
                     let url = '{{ url_for("supercon.reset_record", id = "id") }}'
                     url = url.replace(
                         "id",
@@ -805,7 +805,7 @@
                             }
                         )
                     )
-                },
+                },#}
                 openEditItemDialog(item) {
                     // make a deep copy so that the record is not updated in the table
                     this.editedItem = JSON.parse(JSON.stringify(item))
