disable "reset record" in the document view

--- a/supercon2/templates/document.html
+++ b/supercon2/templates/document.html
@@ -140,9 +140,9 @@
                             <v-icon small class="mr-1" @click="markRecordInvalid(item)" title="Mark as invalid">
                                 mdi-thumb-down
                             </v-icon>
-                            <v-icon small class="mr-1" @click="resetRecord(item)" title="Reset status">
-                                mdi-restart
-                            </v-icon>
+{#                            <v-icon small class="mr-1" @click="resetRecord(item)" title="Reset status">#}
+{#                                mdi-restart#}
+{#                            </v-icon>#}
                             <v-icon small class="mr-1" @click="openEditItemDialog(item)" title="Edit">
                             mdi-pencil
                             </v-icon>
